updated with new Foodio project link, aswell as polished up the site with some tweaks to styling, fixed overflow on the mobile version and made it all around a little sexier

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -120,7 +120,7 @@ section{
     display: flex;
     flex-wrap: wrap;
     flex: 1 30%;
-    padding: 15px 10px 15px 25px;
+    padding: 10px 15px 10px 15px;
 }
 
 .sidebar .section-title {
@@ -138,7 +138,8 @@ section{
 .bio {
     display: flex;
     flex-direction: column;
-    margin: 1.5;
+    margin: auto;
+    
 }
 
 .bio p {
@@ -160,18 +161,20 @@ section{
     border: 5px solid var(---primary-color);
     align-self: center;
     margin: 1.5;
+    border-radius: 50%;
 }
 /* My Work Section */
 
 .my-work {
     display: flex;
-    flex-flow: wrap column;
-    margin: 1.5;
+    flex-flow: wrap row;
+    margin: auto;
     justify-content: center;
     align-items: center;
+    max-width: 100%;
 }
 
-.main-card {
+/* .main-card {
     display: flex;
     flex-flow: wrap column;
     justify-content: space-between;
@@ -179,31 +182,34 @@ section{
     width: 1.5;
     border: 5px solid var(---primary-color);
     flex: 1 50%;
-    margin: 1.5;
-    
+    margin: 0 auto;
+    max-width: fit-content;    
 }
 
+
 .main-card img {
-    height: 100%;
-    width: 100%;
-    min-width: 400px;
-    max-height: 500px;
+    height: 1.5;
+    width: 1.5;
+    max-width: 100%;
+    max-height: 300px;
     position: relative;
-}
+} */
 .cards {
     display: flex;
-    flex-flow: wrap row-reverse;
+    flex-flow: wrap row;
     justify-content: center;
     width: 1.5;
+    max-width: 100%;
 }
 
 .work-card {
     display: flex;
     flex-flow: column-reverse;
-    margin: 10px 10px;
+    margin: auto;
     border: 5px solid var(---primary-color);
     color: var(---primary-color);
     flex: 0 40%;
+    border-radius: 50%;
 }
 
 .work-card img {
@@ -212,6 +218,7 @@ section{
     min-width: 200px;
     max-height: 200px;
     position: relative;
+    border-radius: 50%;
 }
 
 .card-title-box {
@@ -242,6 +249,7 @@ section{
     justify-content: center;
     padding: 10px;
     background-color: var(---tertiary-color);
+    margin: 0 auto;
 }
 
 .contact-info a {
@@ -298,6 +306,15 @@ footer {
     .my-work {
         flex-flow: wrap column;
     }
+
+    .main-card {
+        display: flex;
+        flex-flow: column-reverse;
+        margin: 10px 10px;
+        border: 5px solid var(---primary-color);
+        color: var(---primary-color);
+        flex: 0 40%;
+    }
 }
 
 @media screen and (max-width: 820px) {
@@ -331,6 +348,10 @@ footer {
         max-width: 525px;
         width: 100%;
     }
+
+    .contact-info a {
+        font-size: 15px;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -348,11 +369,11 @@ footer {
     
     .main-card img {
         height: 200px;
-        max-width: 300px;
-        min-width: 300px;
+        width: 200px;
+       
     }
 
     .work-card img {
-        min-width: 300px;
+        width: 300px;
     }
 }
